# AI-Agent-Orchestration-HW3

./: .env-example  .env.example  .gitignore  AGENTS_DESIGN.md  ARCHITECTURE.md  FOLDER_STRUCTURE.md  LICENSE  PROJECT_PLAN.md  README.md  TASK_FLOW.md  pyproject.toml
.github/workflows/: ci.yml
config/: budgets.json  latex.json  logging_config.json  models.json  rate_limits.json  setup.json
data/input/: source_registry.json
docs/: AGENT_SECURITY.md  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  COSTS.md  COURSE_ALIGNMENT.md  EXTENSIBILITY.md  GRADER_WALKTHROUGH.md  IMPLEMENTATION_STATUS.md  ISO_25010.md  PARALLELISM.md  PLAN.md  PRD.md  PRD_citation_management.md  PRD_latex_pipeline.md  PROJECT_BLUEPRINT.md  PROMPTS.md  QUICK_START.md  TODO.md  USAGE.md  UX_AND_ERRORS.md
latex_project/: README.md  agent_roles_table.tex  main.tex  quality_score_formula.tex  references.bib
latex_project/chapters/: chapter_01.tex  chapter_02.tex  chapter_03.tex  chapter_04.tex  chapter_05.tex  chapter_06.tex  chapter_07.tex
materials/: CrewAI_—_מהפסאודו-קוד_לשרשרת_עבודה_מלאה-part-B_Summary.md  CrewAI_—_צוותי_Agents_שעובדים_כמו_ארגון-Part-A_Summary.md  LangChain_בעברית_Summary.md  main-L06-summary-and-ex03-defination_Summary.md  ארכיטקטורת_סוכני_בינה_מלאכותית_בשנת_2026_Summary.md
notebooks/: sensitivity_analysis.ipynb
scripts/hooks/: pre-commit
skills/citation-discipline/: SKILL.md
skills/course-alignment/: SKILL.md
skills/latex-style/: SKILL.md
src/bookgen/: __init__.py  main.py
templates/latex/: chapter.tex.j2  cover.tex.j2  formula.tex.j2  main.tex.j2  table.tex.j2
tests/: conftest.py
tests/integration/: test_end_to_end_artifacts.py  test_pdf_build_smoke.py  test_real_run.py
tests/unit/: test_artifact_normalization.py  test_artifact_persistence.py  test_artifact_validation.py  test_assets.py  test_build.py  test_citation_report.py  test_citations.py  test_compiler.py  test_compiler_log.py  test_config.py  test_content_quality.py  test_dry_run.py  test_escaping.py  test_evidence.py  test_gatekeeper.py  test_graph_generator.py  test_logging.py  test_main.py  test_markdown_manuscript.py  test_orchestration_agents.py  test_orchestration_crew.py  test_sdk.py  (+14 more)
(+51 files in other folders)
