[project]
name = "ai-agent-orchestration-hw3"
version = "0.1.0"
description = "CrewAI-based article/book generator with deterministic LaTeX PDF production harness."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Amr Safadi" },
  { name = "Sharbel Maroun" },
]
license = { text = "MIT" }
dependencies = [
  "crewai",
  "python-dotenv",
  "pydantic",
  "jinja2",
  "matplotlib",
]

[project.scripts]
bookgen = "bookgen.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Development tooling. Installed via `uv sync --group dev` (or `uv run --with ...`).
[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
  "matplotlib",
  "pydantic",
]

# Linter configuration. Guideline 7.1: zero violations required.
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# Coverage configuration. Guideline 6.2: global coverage must stay >= 85%.
# Note: not wired into pytest addopts, so the default `pytest tests/unit`
# command is unchanged. Run `uv run pytest --cov` to enforce the gate.
[tool.coverage.run]
source = ["src"]
omit = ["src/bookgen/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
